Messed up on which icon appeared for kudos

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -26,7 +26,7 @@
 
     <% else %>
 
-      <span data-tooltip class="has-tip" title="Sign-in to give this question a thumbs-up."><i class="fa fa-floppy-o grey-out"></i></span><br>
+      <span data-tooltip class="has-tip" title="Sign-in to give this question a thumbs-up."><i class="fa fa-thumbs-up grey-out"></i></span><br>
       <%= @question.kudos.count %><br><br>
       <span data-tooltip class="has-tip" title="Sign in to save this question to your interview prep area."><i class="fa fa-floppy-o grey-out"></i></span><br>
       <%= @question.favorites.count %>
