Basic implementation for about us page
  *Needs styling

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,61 @@
-<p>"Hello world"</p>
+
+<div>
+<h1>Jackie Johnston</h1>
+<dt>Position</dt>
+<dt>Project Lead</dt>
+<img alt="Jackie Johnston" src="https://secure.gravatar.com/avatar/b2f0960abcd0aa0c8fc7aaddcef50195.png?r=PG&amp;d=mm&amp;s=150" title="Jackie Johnston" />
+<dt>Email</dt>
+<dd><a href="mailto:jj@jackiejohnston.com">jj@jackiejohnston.com</a></dd>
+<dt>Github</dt>
+<dd><a href="https://github.com/jackiejohnston" target="_blank">https://github.com/jackiejohnston</a></dd>
+<dt>Twitter</dt>
+<dd><a href="https://twitter.com/heartsbeach" target="_blank">https://twitter.com/heartsbeach</a></dd>
+<dt>Facebook</dt>
+<dd><a href="https://www.facebook.com/jackiejohnston5" target="_blank">https://www.facebook.com/jackiejohnston5</a></dd>
+<dt>Linked In</dt>
+<dd><a href="http://www.linkedin.com/in/jacquelinejohnston/" target="_blank">http://www.linkedin.com/in/jacquelinejohnston/</a></dd>
+</div><br>
+
+<div>
+<h1>Germain Boue</h1>
+<dt>Position</dt>
+<dt>Growth Hacker</dt>
+<img alt="Germain Boue" src="https://secure.gravatar.com/avatar/bed21d02d7b56eb6949c562de34132b6.png?r=PG&amp;d=mm&amp;s=150" title="Germain Boue" />
+<dt>Email</dt>
+<dd><a href="mailto:boue.germain@gmail.com">boue.germain@gmail.com</a></dd>
+<dt>Github</dt>
+<dd><a href="https://github.com/boue" target="_blank">https://github.com/boue</a></dd>
+<dt>Twitter</dt>
+<dd><a href="https://twitter.com/specktackle" target="_blank">https://twitter.com/specktackle</a></dd>
+<dt>Linked In</dt>
+<dd><a href="http://www.linkedin.com/in/germainboue/" target="_blank">http://www.linkedin.com/in/germainboue/</a></dd>
+</div><br>
+
+<div>
+<h1>Drew Parker</h1>
+<dt>Position</dt>
+<dt>---------</dt>
+<img alt="Drew Parker" src="https://secure.gravatar.com/avatar/2ace3da3e21800f4ea5684cb3a71f4c2.png?r=PG&amp;d=mm&amp;s=150" title="Drew Parker" />
+<dt>Email</dt>
+<dd><a href="mailto:maxweltonspruce@gmail.com">maxweltonspruce@gmail.com</a></dd>
+<dt>Github</dt>
+<dd><a href="https://github.com/drewcp87" target="_blank">https://github.com/drewcp87</a></dd>
+<dt>Twitter</dt>
+<dd><a href="https://twitter.com/drewcp87" target="_blank">https://twitter.com/drewcp87</a></dd>
+<dt>Facebook</dt>
+<dd><a href="https://www.facebook.com/drewcparker" target="_blank">https://www.facebook.com/drewcparker</a></dd>
+<dt>Linked In</dt>
+<dd><a href="http://www.linkedin.com/profile/view?id=307715365&amp;trk=nav_responsive_tab_profile" target="_blank">http://www.linkedin.com/profile/view?id=307715365&amp;trk=nav_responsive_tab_profile</a></dd>
+</div><br>
+
+<div>
+<h1>Mason O'Neal</h1>
+<dt>Position</dt>
+<dt>---------</dt>
+<img alt="Mason O'Neal" src="https://secure.gravatar.com/avatar/e294f258d2740acc74d52d1dd2974186.png?r=PG&amp;d=mm&amp;s=150" title="Mason O'Neal" />
+<dt>Email</dt>
+<dd><a href="mailto:masonwid@gmail.com">masonwid@gmail.com</a></dd>
+<dt>Github</dt>
+<dd><a href="http://MasonONeal" target="_blank">http://MasonONeal</a></dd>
+<dt>Twitter</dt>
+<dd><a href="http://@MasONeal" target="_blank">http://@MasONeal</a></dd>
