Taggable working for Questions

--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -15,6 +15,11 @@
           <%= f.text_area :title, size: "60x12" %>
         </div>
       </div>
+       <div class="row">
+         <div class="small-12 large-12 columns">
+          <%= f.text_field :tag_list %>
+        </div>
+      </div>
       <div class="row">
         <div class="small-12 large-12 columns">
           <%= f.submit "Update Question", class: "button" %>
