--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -15,6 +15,11 @@
           <%= f.text_area :title, placeholder: "Question ...", size: "60x12" %>
         </div>
       </div>
+     <div class="row">
+       <div class="small-12 large-12 columns">
+        <%= f.text_field :tag_list, placeholder: "Tags (separated by commas)" %>
+      </div>
+    </div>
       <div class="row">
         <div class="small-12 large-12 columns">
           <%= f.submit "Submit Question", class: "button" %>
