Styled about us page and page count

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,61 +1,90 @@
+<% content_for :title do %>Tech Interview Tips: About Us<% end %>
+<style>
+  h1, h2, h3{
+    margin-top: 0;
+    padding-top: 0;
+    font-family: 'Candal', sans-serif;
+  }
+  .gravatar-round {
+    width: 100px;
+    height: 100px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+    margin: 10px;
+    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  }
+</style>
+<div class="row">
+  <div class="small-12 large-12 columns panel">
+    <h1>Our Team</h1>
+    <p>This website was built as our <a href="http://www.devbootcamp.com">Dev Bootcamp</a> final project.</p>
+  </div>
+</div>
+<div class="row panel">
 
-<div>
-<h1>Jackie Johnston</h1>
-<dt>Position</dt>
-<dt>Project Lead</dt>
-<img alt="Jackie Johnston" src="https://secure.gravatar.com/avatar/b2f0960abcd0aa0c8fc7aaddcef50195.png?r=PG&amp;d=mm&amp;s=150" title="Jackie Johnston" />
-<dt>Email</dt>
-<dd><a href="mailto:jj@jackiejohnston.com">jj@jackiejohnston.com</a></dd>
-<dt>Github</dt>
-<dd><a href="https://github.com/jackiejohnston" target="_blank">https://github.com/jackiejohnston</a></dd>
-<dt>Twitter</dt>
-<dd><a href="https://twitter.com/heartsbeach" target="_blank">https://twitter.com/heartsbeach</a></dd>
-<dt>Facebook</dt>
-<dd><a href="https://www.facebook.com/jackiejohnston5" target="_blank">https://www.facebook.com/jackiejohnston5</a></dd>
-<dt>Linked In</dt>
-<dd><a href="http://www.linkedin.com/in/jacquelinejohnston/" target="_blank">http://www.linkedin.com/in/jacquelinejohnston/</a></dd>
-</div><br>
+  <div class="large-3 columns text-center">
 
-<div>
-<h1>Germain Boue</h1>
-<dt>Position</dt>
-<dt>Growth Hacker</dt>
-<img alt="Germain Boue" src="https://secure.gravatar.com/avatar/bed21d02d7b56eb6949c562de34132b6.png?r=PG&amp;d=mm&amp;s=150" title="Germain Boue" />
-<dt>Email</dt>
-<dd><a href="mailto:boue.germain@gmail.com">boue.germain@gmail.com</a></dd>
-<dt>Github</dt>
-<dd><a href="https://github.com/boue" target="_blank">https://github.com/boue</a></dd>
-<dt>Twitter</dt>
-<dd><a href="https://twitter.com/specktackle" target="_blank">https://twitter.com/specktackle</a></dd>
-<dt>Linked In</dt>
-<dd><a href="http://www.linkedin.com/in/germainboue/" target="_blank">http://www.linkedin.com/in/germainboue/</a></dd>
-</div><br>
+    <h3>Jackie<br>Johnston</h3>
+    <dt>Project Lead</dt>
+    <img class="gravatar-round" alt="Jackie Johnston" src="https://secure.gravatar.com/avatar/b2f0960abcd0aa0c8fc7aaddcef50195.png?r=PG&amp;d=mm&amp;s=100" title="Jackie Johnston" />
 
-<div>
-<h1>Drew Parker</h1>
-<dt>Position</dt>
-<dt>---------</dt>
-<img alt="Drew Parker" src="https://secure.gravatar.com/avatar/2ace3da3e21800f4ea5684cb3a71f4c2.png?r=PG&amp;d=mm&amp;s=150" title="Drew Parker" />
-<dt>Email</dt>
-<dd><a href="mailto:maxweltonspruce@gmail.com">maxweltonspruce@gmail.com</a></dd>
-<dt>Github</dt>
-<dd><a href="https://github.com/drewcp87" target="_blank">https://github.com/drewcp87</a></dd>
-<dt>Twitter</dt>
-<dd><a href="https://twitter.com/drewcp87" target="_blank">https://twitter.com/drewcp87</a></dd>
-<dt>Facebook</dt>
-<dd><a href="https://www.facebook.com/drewcparker" target="_blank">https://www.facebook.com/drewcparker</a></dd>
-<dt>Linked In</dt>
-<dd><a href="http://www.linkedin.com/profile/view?id=307715365&amp;trk=nav_responsive_tab_profile" target="_blank">http://www.linkedin.com/profile/view?id=307715365&amp;trk=nav_responsive_tab_profile</a></dd>
-</div><br>
+    <dd><a href="https://github.com/jackiejohnston" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
+ 
+    <a href="https://twitter.com/heartsbeach" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
 
-<div>
-<h1>Mason O'Neal</h1>
-<dt>Position</dt>
-<dt>---------</dt>
-<img alt="Mason O'Neal" src="https://secure.gravatar.com/avatar/e294f258d2740acc74d52d1dd2974186.png?r=PG&amp;d=mm&amp;s=150" title="Mason O'Neal" />
-<dt>Email</dt>
-<dd><a href="mailto:masonwid@gmail.com">masonwid@gmail.com</a></dd>
-<dt>Github</dt>
-<dd><a href="http://MasonONeal" target="_blank">http://MasonONeal</a></dd>
-<dt>Twitter</dt>
-<dd><a href="http://@MasONeal" target="_blank">http://@MasONeal</a></dd>
+    <a href="http://www.linkedin.com/in/jacquelinejohnston/" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></dd>
+
+  </div>
+
+  <div class="large-3 columns text-center">
+
+    <h3>Germain<br>Boué</h3>
+    <dt>Growth Hacker</dt>
+    <img class="gravatar-round" alt="Germain Boue" src="https://secure.gravatar.com/avatar/bed21d02d7b56eb6949c562de34132b6.png?r=PG&amp;d=mm&amp;s=100" title="Germain Boue" />
+
+    <dd><a href="https://github.com/boue" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
+
+    <a href="https://twitter.com/specktackle" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+
+    <a href="http://www.linkedin.com/in/germainboue/" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></dd>
+
+    </div>
+
+    <div class="large-3 columns text-center">
+
+      <h3>Drew<br>Parker</h3>
+      <dt>General Developer</dt>
+      <img class="gravatar-round" alt="Drew Parker" src="https://secure.gravatar.com/avatar/2ace3da3e21800f4ea5684cb3a71f4c2.png?r=PG&amp;d=mm&amp;s=100" title="Drew Parker" />
+
+      <dd><a href="https://github.com/drewcp87" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
+
+      <a href="https://twitter.com/drewcp87" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+
+      <a href="http://www.linkedin.com/profile/view?id=307715365&amp;trk=nav_responsive_tab_profile" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></dd>
+
+    </div>
+
+    <div class="large-3 columns text-center">
+
+      <h3>Mason<br>O'Neal</h3>
+      <dt>Test Monkey</dt>
+      <img class="gravatar-round" alt="Mason O’Neal" src="https://secure.gravatar.com/avatar/e294f258d2740acc74d52d1dd2974186.png?r=PG&amp;d=mm&amp;s=100" title="Mason O'Neal" />
+
+      <dd><a href="https://github.com/MasonONeal" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
+
+      <a href="https://twitter.com/MasONeal" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a></dd>
+
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
