--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
               <li><a href="http://www.techinterview.tips/questions?search=JQuery">JQuery</a></li>
             </ul>
           </li>
+          <li><%= link_to "About", about_path %></li>
         </ul>
 
         <!-- Right Nav Section -->
