--- a/app/views/questions/_share.html.erb
+++ b/app/views/questions/_share.html.erb
@@ -6,3 +6,6 @@
   <i class="fa fa-twitter"></i>
 <% end %>
 
+<%= link_to "http://www.linkedin.com/shareArticle?mini=true&url=#{request.original_url}&title=#{@question.title}" do %>
+  <i class="fa fa-linkedin-square"></i>
+<% end %>
