Mobile menu now works

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <li class="name">
           <h1><%= link_to "Tech Interview Tips", root_path %></h1>
         </li>
-        <!-- <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li> -->
+        <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
       </ul>
 
       <section class="top-bar-section">
@@ -77,46 +77,9 @@
         </ul>
       </section>
     </nav>
-
-    <!-- mobile menu -->
-
-    <div class="off-canvas-wrap" data-offcanvas>
-      <div class="inner-wrap">
-        <aside class="right-off-canvas-menu">
-        <section class="right-small">
-          <a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
-        </section>
-        <ul class="off-canvas-list">
-          <li><label>Categories</label></li>
-          <li><%= link_to "All Questions", questions_path %></li>
-          <li><a href="http://www.techinterview.tips/questions?search=Ruby">Ruby</a></li>
-          <li><a href="http://www.techinterview.tips/questions?search=Javascript">Javascript</a></li>
-          <li><a href="http://www.techinterview.tips/questions?search=JQuery">JQuery</a></li>
-          <% if current_user %>
-            <li><%= link_to "Interview Prep", user_path(current_user) %></li>
-            <li><%= link_to "Post a Question", new_question_path %></li>
-            <li><%= link_to "Sign out", signout_path %></li>
-          <% else %>
-            <li><%= link_to "Using GitHub", "/auth/github" %></li>
-            <li><%= link_to "Using Linked-In", "/auth/linkedin" %></li>
-          <% end %>
-        </ul>
-        </aside>
-        <a class="exit-off-canvas"></a>
-      </div>
-    </div>
-    
-<!--     <nav class="tab-bar">
-      <section class="right-small">
-        <a class="right-off-canvas-toggle menu-icon" ><span></span></a>
-      </section>
-    </nav> -->
-    <!-- end mobile menu -->
-
   </div>
     <!-- <div class="notice"><%= notice %></div>
     <div class="alert"><%= alert %></div> -->
-
 
     <%= yield %>
 
