--- a/app/views/questions/_share.html.erb
+++ b/app/views/questions/_share.html.erb
@@ -1,5 +1,5 @@
-<%= link_to "http://www.facebook.com/share.php?p[url]=[#{request.host_with_port}/questions/#{@question.title}]&title=[#{@question.title}]" do %>
-      <i class="fa fa-facebook-square"></i>
+<%= link_to "http://www.facebook.com/share.php?u=[#{request.host_with_port}/questions/#{@question.title}]&title=[#{@question.title}]" do %>
+  <i class="fa fa-facebook-square"></i>
 <% end %>
 
 <%= link_to "http://twitter.com/home?status=#{request.original_url}" do %>
@@ -9,3 +9,5 @@
 <%= link_to "http://www.linkedin.com/shareArticle?mini=true&url=#{request.original_url}&title=#{@question.title}" do %>
   <i class="fa fa-linkedin-square"></i>
 <% end %>
+
+
