fixes some layout issues

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -23,9 +23,6 @@
       <span data-tooltip class="has-tip" title="Save this question to your Interview Prep area."><%= link_to favorites_path(question_id: @question.id), class: "fa fa-floppy-o", method: :post do %>
         <% end %></span><br>
       <%= @question.favorites.count %><br><br>
-      <span data-tooltip class="has-tip" title="Pageviews"><%= @question.impressionist_count %></span><br>
-
-      <%= render partial: "questions/share" %>
 
     <% else %>
 
@@ -36,7 +33,9 @@
 
     <% end %>
     <span data-tooltip class="has-tip" title="Pageviews"><i class="fa fa-eye"></i></span><br>
-    <%= @question.impressionist_count %>
+    <%= @question.impressionist_count %><br><br>
+
+    <%= render partial: "questions/share" %>
 
   </div>
 
