--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,9 +45,9 @@
             <a href="#">Categories</a>
             <ul class="dropdown">
               <li><%= link_to "All Questions", questions_path %></li>
-              <li><a href="http://www.techinterview.tips/questions?search=Ruby">Ruby</a></li>
-              <li><a href="http://www.techinterview.tips/questions?search=Javascript">Javascript</a></li>
-              <li><a href="http://www.techinterview.tips/questions?search=JQuery">JQuery</a></li>
+              <li><a href="http://www.techinterview.tips/tags/Ruby">Ruby</a></li>
+              <li><a href="http://www.techinterview.tips/tags/Javascript">Javascript</a></li>
+              <li><a href="http://www.techinterview.tips/tags/jQuery">JQuery</a></li>
             </ul>
           </li>
           <li><%= link_to "About", about_path %></li>
