--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -84,6 +84,7 @@
       <% else %>
         <p class="text-right">Posted by: <i class="fa fa-linkedin-square"></i> <%= link_to answer.user.name, answer.user.url %><br>
       <% end %>
+        <%= link_to "delete", answer_path(answer), method: :delete %>
       <%= time_ago_in_words(answer.created_at) %> ago</p>
       <% if current_user %>
     <%= render partial: "comments/new", locals: { question: @question, answer: answer } %>
