Changes to about page
  *Took out content attributes
  *Summary to API

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -21,6 +21,7 @@
   <div class="small-12 large-12 columns panel">
     <h1>Our Team</h1>
     <p>This website was built as our <a href="http://www.devbootcamp.com">Dev Bootcamp</a> final project.</p>
+    <p>If interested in 3rd party development, feel free to use the information provided to you via <a href="http://www.techinterview.tips/api/questions">our API</a>. If you want to see the information nicely formatted, you can use a Chrome extension such as <a href="https://chrome.google.com/webstore/detail/jsonview/chklaanhfefbnpoihckbnefhakgolnmc">JSONView.</a></p>
   </div>
 </div>
 <div class="row panel">
@@ -32,7 +33,7 @@
     <img class="gravatar-round" alt="Jackie Johnston" src="https://secure.gravatar.com/avatar/b2f0960abcd0aa0c8fc7aaddcef50195.png?r=PG&amp;d=mm&amp;s=100" title="Jackie Johnston" />
 
     <dd><a href="https://github.com/jackiejohnston" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
- 
+
     <a href="https://twitter.com/heartsbeach" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
 
     <a href="http://www.linkedin.com/in/jacquelinejohnston/" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a></dd>
@@ -70,7 +71,7 @@
     <div class="large-3 columns text-center">
 
       <h3>Mason<br>O'Neal</h3>
-      <dt>Test Monkey</dt>
+      <dt>Testing and Development</dt>
       <img class="gravatar-round" alt="Mason O’Neal" src="https://secure.gravatar.com/avatar/e294f258d2740acc74d52d1dd2974186.png?r=PG&amp;d=mm&amp;s=100" title="Mason O'Neal" />
 
       <dd><a href="https://github.com/MasonONeal" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>
