more formatting to activity feed page and link added to dropdown on topbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,7 @@
               <li><a href="http://www.techinterview.tips/questions?search=Ruby">Ruby</a></li>
               <li><a href="http://www.techinterview.tips/questions?search=Javascript">Javascript</a></li>
               <li><a href="http://www.techinterview.tips/questions?search=JQuery">JQuery</a></li>
+              <li><a href="http://www.techinterview.tips/actions?page=1">Activity Feed</a></li>
             </ul>
           </li>
           <li><%= link_to "About", about_path %></li>
