--- a/app/views/actions/index.html.erb
+++ b/app/views/actions/index.html.erb
@@ -2,7 +2,7 @@
   <% action %>
 <% end %>
 
-<% content_for :title do %>Technical Interview Questions<% end %>
+<% content_for :title do %>Activity Feed<% end %>
 <style>
   h1 {
     margin-top: 0;
@@ -37,7 +37,6 @@
         <%= " " + time_ago_in_words(action.created_at) + " ago" %>
       </h4>
     <% end %>
-    <hr>
     <%= will_paginate @actions, renderer: FoundationPagination::Rails %>
   </div>
 </div>
