--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,13 +25,14 @@
     <% end %>
   </div>
   <div class="large-4 columns panel">
-    <h3>Activity Feed</h3>
+    <h3>My Activity Feed</h3>
+    <ul>
     <% Action.where(user_id: current_user.id, actionable_type: "Question").each do |action| %>
       <li><%= action.content + " " %><%= link_to action.actionable.title, question_path(action.actionable) %><%= " created by " %> <%= link_to User.find(action.user_id).name, user_path(User.find(action.user_id)) %><%= " " +time_ago_in_words(action.created_at) + " ago" %></li>
     <% end %>
     <% Action.where(user_id: current_user.id, actionable_type: "Answer").each do |action| %>
       <li><%= action.content + " " %><%= action.actionable.content %><%= " created by " %> <%= link_to User.find(action.user_id).name, user_path(User.find(action.user_id)) %><%= " " +time_ago_in_words(action.created_at) + " ago" %></li>
     <% end %>
-
+    </ul>
   </div>
 </div>
