--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,10 +6,10 @@
 
     <% if current_user %>
 
-      <span data-tooltip class="has-tip" title="Give this question a thumbs-up."><%= link_to kudos_path(question_id: @question.id), class: "fa fa-thumbs-up", method: :post do %>
-        <% end %>&nbsp;<%= @question.kudos.count %></span>&nbsp;&nbsp;&nbsp;
-      <span data-tooltip class="has-tip" title="Save this question to your Interview Prep area."><%= link_to favorites_path(question_id: @question.id), class: "fa fa-floppy-o", method: :post do %>
-        <% end %>&nbsp;<%= @question.favorites.count %></span>&nbsp;&nbsp;&nbsp;
+      <span data-tooltip class="has-tip" title="Give this question a thumbs-up."><%= link_to kudos_path(question_id: @question.id), class: "fa fa-thumbs-up", :remote => true, :id => "thumbs-up-link", method: :post do %>
+      <% end %>&nbsp;<span id="thumbs-up-count"><%= @question.kudos.count %></span></span>&nbsp;&nbsp;&nbsp;
+      <span data-tooltip class="has-tip" title="Save this question to your Interview Prep area."><%= link_to favorites_path(question_id: @question.id), class: "fa fa-floppy-o", :remote => true, :id => "save-link", method: :post do %>
+        <% end %>&nbsp;<span id="save-count"><%= @question.favorites.count %></span></span>&nbsp;&nbsp;&nbsp;
 
     <% else %>
 
@@ -90,3 +90,5 @@
 
   </div>
 <% end %>
+
+<script src="/assets/question.js"></script>
