Removed activity feed partial since it wasn't working

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
 <% content_for :title do %><%= @user.name %><% end %>
 <div class="row panel">
-  <div class="large-8 columns">
+  <!-- <div class="large-8 columns"> -->
+  <div class="large-12 columns">
   <%= render partial: "layouts/alerts" %>
     <p>
     <h1>Interview Prep</h1>
@@ -17,10 +18,10 @@
       <% end %>
     <% end %>
   </div>
-  <div class="large-4 columns panel">
+<!--   <div class="large-4 columns panel">
     <h3>My Activity Feed</h3>
     <ul>
-    <%= render partial: "actions/show" %>
+      partial goes here
     </ul>
   </div>
-</div>
+</div> -->
