--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title do %>Leaderboard<% end %>
+<h1>Leaderboard</h1>
 <% @users.each do |user| %>
 <div class="row">
   <div class="small-12 large-12 columns panel">
