formats some of the data to be right-aligned

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,21 +5,27 @@
   </div>
 </div>
 <% @users.each do |user| %>
-  <div class="row">
-  <div class="small-12 large-12 columns panel clearfix">
+  <!-- <div class="row">
+  <div class="small-12 large-12 columns panel clearfix"> -->
+  <div class="row panel">
+  <div class="medium-3 columns text-center">
     <div class="gravatar-body-left"><%= gravatar_for(user) %></div>
       <% if user.provider == "github" %>
         <p class="text-left"><i class="fa fa-github-square"></i> <%= link_to user.name, "https://github.com/#{user.name}" %><br>
       <% else %>
         <p class="text-left"><i class="fa fa-linkedin-square"></i> <%= link_to user.name, user.url %><br>
       <% end %>
-      <ul class="text-left">
-        <li><%= "Questions created: " %><%= user.questions.count %></li>
-        <li><%= "Questions answered: " %><%= user.answers.count %></li>
-        <li><%= "Number of comments: " %><%= user.comments.count %></li>
-        <li><%= "Kudos given: " %><%= user.kudos.count %></li>
-      </ul>
       <%= "Account created " + time_ago_in_words(user.created_at) %> ago</p>
+    </div>
+      <!-- <div class="row panel"> -->
+      <!-- <div class="large-9 columns text-center"> -->
+      <ul class="text-right">
+        <%= "Questions created: " %><%= user.questions.count %><br>
+        <%= "Questions answered: " %><%= user.answers.count %><br>
+        <%= "Number of comments: " %><%= user.comments.count %><br>
+        <%= "Kudos given: " %><%= user.kudos.count %>
+      </ul>
+  </div>
     </div>
   </div>
 <% end %>
